# Currency-Exchange-Monitor-Alert-Agent

./: .env  README.md  pyproject.toml
src/: main.py
src/agent/: __init__.py  raw_agent_model.py.py
src/templates/: index.html
