[tool.poetry]
name = "stock-exchange-monitor"
version = "0.1.0"
description = ""
authors = ["Valhari Meshram <valharimeshram14@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
